--- a/src/pages/Beijing/BeijingPage.css
+++ b/src/pages/Beijing/BeijingPage.css
@@ -44,7 +44,7 @@
 
 .page-header {
   width: 100%;
-  margin: 0 0 var(--spacing-lg);
+  margin: 0 0 var(--spacing-sm);
   padding: 0;
   text-align: center;
 }
@@ -53,7 +53,7 @@
   font-size: 3rem;
   color: var(--heading-emphasis-color);
   margin: 0;
-  line-height: 1.2;
+  line-height: 1.1;
 }
 
 .gallery-section {
